    instances under FileSystem (Sangjin Lee via Ming Ma)

    HADOOP-12706. TestLocalFsFCStatistics#testStatisticsThreadLocalDataCleanUp
    times out occasionally (Sangjin Lee and Colin Patrick McCabe via jlowe)

    HADOOP-12736. TestTimedOutTestsListener#testThreadDumpAndDeadlocks
    sometimes times out. (Xiao Chen via aajisaka)

Release 2.6.3 - 2015-12-17

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  OPTIMIZATIONS

  BUG FIXES

    HADOOP-12526. there are duplicate dependency definitions in pom's (sjlee)

    HADOOP-12577. Bumped up commons-collections version to 3.2.2 to address a
    security flaw. (Wei-Chiu Chuang via vinodkv)

Release 2.6.2 - 2015-10-28

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  OPTIMIZATIONS

  BUG FIXES

Release 2.6.1 - 2015-09-23

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    HADOOP-7139. Allow appending to existing SequenceFiles
    (kanaka kumar avvaru via vinayakumarb)

    HADOOP-12280. Skip unit tests based on maven profile rather than
    NativeCodeLoader.isNativeCodeLoaded (Masatake Iwasaki via Colin P. McCabe)

  OPTIMIZATIONS

    HADOOP-11238. Update the NameNode's Group Cache in the background when
    possible (Chris Li via Colin P. McCabe)

    HADOOP-11506. Configuration variable expansion regex expensive for long
    values. (Gera Shegalov via gera)

  BUG FIXES

    HADOOP-11466: FastByteComparisons: do not use UNSAFE_COMPARER on the SPARC
    architecture because it is slower there (Suman Somasundar via Colin P.
    McCabe)

    HADOOP-10786. Fix UGI#reloginFromKeytab on Java 8. (Stephen Chu via wheat9)

    HADOOP-11333. Fix deadlock in DomainSocketWatcher when the notification
    pipe is full (zhaoyunjiong via cmccabe)

    HADOOP-11343. Overflow is not properly handled in caclulating final iv for
    AES CTR. (Jerry Chen via wang)

    HADOOP-11368. Fix SSLFactory truststore reloader thread leak in
    KMSClientProvider. (Arun Suresh via wang)
